...
        getForecast()
    }
    
    //MARK: - @IBAction
    
    @IBAction func daysButtonPressed(_ sender: UIButton) {
        let alert = UIAlertController(title: "Select number of days", message: nil, preferredStyle: .actionSheet)
        alert.addAction(UIAlertAction(title: "3 DAYS", style: .default, handler: { _ in
            self.daysSelected = 3
            self.getForecast()
        }))
        alert.addAction(UIAlertAction(title: "10 DAYS", style: .default, handler: { _ in
            self.daysSelected = 10
            self.getForecast()
...
