...
                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWJ-pf-X53">
                                                            <rect key="frame" x="130" y="95" width="135.5" height="32"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="city-name"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bt6-Hh-X10">
                                                            <rect key="frame" x="111.5" y="172" width="172.5" height="40"/>
...
